--- a/sharinpix/src/aura/ImageSearch/ImageSearch.cmp
+++ b/sharinpix/src/aura/ImageSearch/ImageSearch.cmp
@@ -12,9 +12,8 @@
 
     <aura:attribute name="tagOperator" type="String" default=""/>
     <aura:attribute name="selectedTags" type="String" access="global"/>
-    <aura:attribute name="tagOptions" type="Object"/>
 
-    <aura:attribute name="albumIds" type="String" access="private"/>
+    <aura:attribute name="searchUrls" type="String[]" access="private"/>
 
     <aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
     <aura:handler event="aura:waiting" action="{! c.startLexSpinner }"/>
@@ -26,10 +25,10 @@
         <div class="slds-grid slds-wrap slds-grid--pull-padded slds-grid--align-center">
             <div class="slds-p-horizontal--small slds-size--1-of-1 slds-medium-size--4-of-6 slds-large-size--6-of-12">
                 <aura:if isTrue="{! v.showQueryPanel }">
-                    <c:ReportsQuery reportId="{! v.reportId }" reportParameters="{! v.reportParameters }"/>
+                    <c:ReportsQuery aura:id="reportsQuery" reportId="{! v.reportId }" reportParameters="{! v.reportParameters }"/>
 
                     <aura:if isTrue="{! v.allowQueryByTag }">
-                        <c:TagsQuery tagOperator="{! v.tagOperator }" selectedTags="{! v.selectedTags }"/>
+                        <c:TagsQuery aura:id="tagsQuery" tagOperator="{! v.tagOperator }" selectedTags="{! v.selectedTags }"/>
                     </aura:if>
 
                     <div class="slds-form-element center">
@@ -37,7 +36,7 @@
                             <lightning:icon iconName="utility:search" size="xx-small" alternativeText=""/>
                             &nbsp;Go
                         </lightning:button>
-                        <lightning:button class="page-btn" onclick="{! c.clearInput }">
+                        <lightning:button class="page-btn" onclick="{! c.reset }">
                             <lightning:icon iconName="utility:clear" size="xx-small" alternativeText=""/>
                             &nbsp;Clear
                         </lightning:button>
@@ -47,7 +46,7 @@
         </div>
 
         <div style="{! 'display: ' + (v.showResultsPanel ? 'block' : 'none') }">
-            <c:QueryResults aura:id="queryResults" albumIds="{! v.albumIds }" tagOptions="{! v.tagOptions }" pageSize="{! v.pageSize }"/>
+            <c:QueryResults aura:id="queryResults" searchUrls="{! v.searchUrls }"/>
         </div>
     </div>
 </aura:component>
