--- a/sharinpix/src/components/MobileUpload.component
+++ b/sharinpix/src/components/MobileUpload.component
@@ -14,7 +14,7 @@
     <apex:attribute name="albumId" type="String" description="Id of the album to create the job for." assignTo="{! jobAlbumId }" access="global"/>
     <apex:attribute name="name" type="String" description="The job's name in the application." assignTo="{! jobName }" access="global"/>
     <apex:attribute name="options" type="String" description="Options to be passed to the SharinPix application." assignTo="{! jobOptions }" access="global"/>
-    <apex:attribute name="delay" type="Integer" description="The link's lifetime to open the app (in seconds)." assignTo="{! jobDelay }" access="global" default="300"/>
+    <apex:attribute name="expiresAfter" type="Integer" description="The link's lifetime to open the app (in seconds)." assignTo="{! linkExpiration }" access="global" default="300"/>
 
     <apex:form id="frmSharinPix">
         <apex:actionFunction action="{! generateAppUrl }" name="launch" reRender="frmSharinPix"/>
