--- a/sharinpix/src/aura/TagsQuery/TagsQuery.cmp
+++ b/sharinpix/src/aura/TagsQuery/TagsQuery.cmp
@@ -4,7 +4,11 @@
     <aura:attribute name="tagNames" type="String[]"/>
     <aura:attribute name="displayTags" type="boolean" default="false"/>
 
+    <aura:attribute name="selection" type="String"/>
+
     <aura:method name="reset" action="{! c.reset }"/>
+
+    <aura:handler name="change" value="{! v.selection }" action="{! c.setSelectedTags }"/>
 
     <fieldset class="slds-form-element">
         <legend class="slds-form-element__legend slds-form-element__label">Filter by tags</legend>
@@ -36,7 +40,7 @@
         <div class="slds-form-element">
             <label class="slds-form-element__label" for="selTagList">Tags</label>
             <div class="slds-form-element__control">
-                <ui:inputSelect class="slds-select select-tags" multiple="true" aura:id="selTagList" value="{! v.selectedTags }">
+                <ui:inputSelect class="slds-select select-tags" multiple="true" aura:id="selTagList" value="{! v.selection }">
                     <aura:iteration items="{! v.tagNames }" var="tag">
                         <ui:inputSelectOption text="{! tag }" label="{! tag }"/>
                     </aura:iteration>
