--- a/sharinpix-free/src/pages/SharinPixUploadApi.page
+++ b/sharinpix-free/src/pages/SharinPixUploadApi.page
@@ -20,7 +20,16 @@
 
         var sessionId = '{!$Api.Session_ID}';
         if (sessionId.includes(orgId)){
-          broadcastMessage({name: 'loaded', eventIdentifier: '{!$CurrentPage.parameters.eventIdentifier}'});
+          $.ajax({
+            url: "/services/data/"+ API_VERSION + "/sobjects",
+            headers: {'Authorization': 'Bearer {!$Api.Session_ID}', 'Content-Type': 'application/json'},
+            success: function(response) {
+              broadcastMessage({name: 'loaded', eventIdentifier: '{!$CurrentPage.parameters.eventIdentifier}'});
+            },
+            error: function(errorObj, errorMessage, errorThrown){
+              console.log('errorObj: ', errorObj.responseJSON);
+            }
+          });
         }
 
         var uploading = 0;
