--- a/sharinpix/src/aura/SharinPixSearchResults/SharinPixSearchResults.cmp
+++ b/sharinpix/src/aura/SharinPixSearchResults/SharinPixSearchResults.cmp
@@ -1,15 +1,22 @@
 <aura:component controller="SharinPixImageSearchController">
-    <aura:attribute name="searchUrls" type="String[]"/>
+    <aura:attribute name="reportId" type="String" access="global"/>
+    <aura:attribute name="reportParameters" type="String" access="global"/>
+    <aura:attribute name="tagOperator" type="String" default="OR" access="global"/>
+    <aura:attribute name="tagNames" type="String" access="global"/>
+    <aura:attribute name="pageSize" type="Integer" default="25" access="global"/> <!-- Page size ! -->
 
     <aura:attribute name="currentPage" type="Integer" default="0"/>
     <aura:attribute name="totalPages" type="Integer"/>
     <aura:attribute name="loading" type="Boolean" default="false"/>
 
     <aura:attribute name="searchUrl" type="String"/>
+    <aura:attribute name="searchUrls" type="String[]"/>
 
+    <aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
+    <!-- <aura:handler name="change" value="{! v.reportId }" action="{! c.startSearch }"/> -->
     <aura:handler name="change" value="{! v.currentPage }" action="{! c.handlePageChange }"/>
 
-    <aura:method name="init" action="{! c.doInit }"/>
+    <aura:method name="startSearch" action="{! c.startSearch }"/>
     <aura:method name="reset" action="{! c.reset }"/>
 
     <div class="slds-form-element center">
