--- a/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
+++ b/sharinpix/src/aura/SharinPixSearch/SharinPixSearch.cmp
@@ -3,16 +3,21 @@
     <aura:attribute name="reportParameters" type="String" access="global"/>
     <aura:attribute name="tagOperator" type="String" default="OR" access="global"/>
     <aura:attribute name="tagNames" type="String" access="global"/>
-    <aura:attribute name="pageSize" type="Integer" default="25" access="global"/> <!-- Page size ! -->
 
-    <aura:attribute name="baseUrl" type="String"/>
-    <aura:attribute name="searchTokens" type="Object"/>
+    <aura:attribute name="searchUrl" type="String" default=""/>
+    <aura:attribute name="tokens" type="Object"/>
+    <aura:attribute name="page" type="Integer" default="-1"/>
+    <aura:attribute name="loading" type="Boolean" default="false"/>
 
     <aura:handler name="init" value="{! this }" action="{! c.doInit }"/>
-    <!-- <aura:handler name="change" value="{! v.reportId }" action="{! c.startSearch }"/> -->
+    <aura:handler name="change" value="{! v.searchUrl }" action="{! c.startLoading }"/>
+    <aura:handler name="change" value="{! v.tokens }" action="{! c.handleNewTokens }"/>
+    <aura:handler name="change" value="{! v.page }" action="{! c.doSearch }"/>
 
     <aura:method name="startSearch" action="{! c.startSearch }"/>
     <aura:method name="reset" action="{! c.reset }"/>
 
-    <c:SharinPixPaginator aura:id="paginator" baseUrl="{! v.baseUrl }" searchTokens="{! v.searchTokens }"/>
+    <div class="slds-form-element center">
+        <iframe aura:id="SharinPix" src="{! v.searchUrl }" width="100%" height="450px" style="border: 0;" onload="{! c.stopLoading }"></iframe>
+    </div>
 </aura:component>
