--- a/sharinpix/src/pages/EinsteinModelStatus.page
+++ b/sharinpix/src/pages/EinsteinModelStatus.page
@@ -25,9 +25,9 @@
 </head>
 
 <body>
-  <iframe id="statusIframe" src="{!modelStatusUrl}" height="300px" width="100%" style="border: 0"/>
+  <iframe id="statusIframe" src="{!modelStatusUrl}" height="300px" width="100%" style="border: 0" sandbox="" />
   <div id="album">
-    <iframe id="albumIframe" src="{!albumUrl}" height="520px" width="100%" style="border: 0"/>
+    <iframe id="albumIframe" src="{!albumUrl}" height="520px" width="100%" style="border: 0" sandbox="" />
   </div>
 </body>
 </html>
